MicroserviceSample/src/basket-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: basket-api
  name: basket-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: basket-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose-windows-amd64.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: basket-api
    spec:
      containers:
      - env:
        - name: CacheSettings.ConnectionString
          value: basket-db:6379
        - name: GrpcSettings.DiscountUrl
          value: http://discount-grpc-api
        image: josephm101/basketapi
        imagePullPolicy: ""
        name: basketapi
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
