MicroserviceSample/src/basket-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: basket-db
  name: basket-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: basket-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose-windows-amd64.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: basket-db
    spec:
      containers:
      - image: redis:latest
        imagePullPolicy: ""
        name: shopping-redis
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
