MicroserviceSample/src/catalog-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: catalog-db
  name: catalog-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: catalog-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose-windows-amd64.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: catalog-db
    spec:
      containers:
      - image: mongo:windowsservercore-1809
        imagePullPolicy: ""
        name: shopping-mongo
        ports:
        - containerPort: 27017
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
