MicroserviceSample/src/discount-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: discount-db
  name: discount-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: discount-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose-windows-amd64.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: discount-db
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: DiscountDb
        - name: POSTGRES_PASSWORD
          value: samplepass
        - name: POSTGRES_USER
          value: admin
        image: postgres
        imagePullPolicy: ""
        name: discountdb
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-data
status: {}
