MicroserviceSample/src/discount-grpc-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: discount-grpc-api
  name: discount-grpc-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: discount-grpc-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose-windows-amd64.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: discount-grpc-api
    spec:
      containers:
      - env:
        - name: ASPNETCORE_ENVIORNMENT
          value: Development
        - name: DatabaseSettings__ConnectionString
          value: Server=discount-db;Port=5432;Database=DiscountDb;User Id=admin;Password=samplepass;
        - name: WAIT_HOSTS
          value: discountdb:5432
        - name: WAIT_HOSTS_TIMEOUT
          value: "300"
        - name: WAIT_HOST_CONNECT_TIMEOUT
          value: "30"
        - name: WAIT_SLEEP_INTERVAL
          value: "30"
        image: josephm101/discountgrpcapi
        imagePullPolicy: ""
        name: discountgrpcapi
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
