MicroserviceSample/src/order-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: order-db
  name: order-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: order-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose-windows-amd64.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: order-db
    spec:
      containers:
      - env:
        - name: ACCEPT_EULA
          value: Y
        - name: SA_PASSWORD
          value: Password@123
        image: mcr.microsoft.com/mssql/server:2017-latest
        imagePullPolicy: ""
        name: orderdb
        ports:
        - containerPort: 1433
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
