MicroserviceSample/src/portainer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: portainer
  name: portainer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: portainer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose-windows-amd64.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: portainer
    spec:
      containers:
      - image: portainer/portainer-ce
        imagePullPolicy: ""
        name: portainer
        ports:
        - containerPort: 9000
        - containerPort: 8000
        resources: {}
        volumeMounts:
        - mountPath: /var/run/docker.sock
          name: portainer-claim0
        - mountPath: /data portainer/portainer-ce
          name: portainer-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: portainer-claim0
        persistentVolumeClaim:
          claimName: portainer-claim0
      - name: portainer-data
        persistentVolumeClaim:
          claimName: portainer-data
status: {}
