MicroserviceSample/src/basket-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: basket-api
  name: basket-api
spec:
  type: LoadBalancer
  ports:
  - name: "6002"
    port: 6002
    targetPort: 80
  selector:
    io.kompose.service: basket-api
status:
  loadBalancer: {}
