MicroserviceSample/src/catalog-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: catalog-api
  name: catalog-api
spec:
  type: LoadBalancer
  ports:
  - port: 6001
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    io.kompose.service: catalog-api
  externalIPs:
  - 172.30.160.73
status:
  loadBalancer: {}
