MicroserviceSample/src/discount-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: discount-api
  name: discount-api
spec:
  type: LoadBalancer
  ports:
  - name: "6003"
    port: 6003
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    io.kompose.service: discount-api
  externalIPs:
  - 172.25.80.197
status:
  loadBalancer: {}
