MicroserviceSample/src/discount-grpc-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: discount-grpc-api
  name: discount-grpc-api
spec:
  type: LoadBalancer
  ports:
  - name: "6004"
    port: 6004
    targetPort: 50051
    protocol: TCP
    name: http
  selector:
    io.kompose.service: discount-grpc-api
  externalIPs:
  - 172.30.160.73
status:
  loadBalancer: {}
