MicroserviceSample/src/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  ports:
  - name: "5050"
    port: 5050
    targetPort: 80
  selector:
    io.kompose.service: pgadmin
status:
  loadBalancer: {}
