MicroserviceSample/src/portainer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: portainer
  name: portainer
spec:
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
  - name: "5011"
    port: 5011
    targetPort: 8000
  selector:
    io.kompose.service: portainer
status:
  loadBalancer: {}
