MicroserviceSample/src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /basketapi/(.*)
            pathType: Prefix
            backend:
              service:
                name: basket-api
                port:
                  number: 80
          - path: /catalogapi/(.*)
            pathType: Prefix
            backend:
              service:
                name: catalog-api
                port:
                  number: 6001
